Consolidate and standardize Figure component  and lots of related refactoring

--- a/content/blog_posts/scrabble-scramble.mdx
+++ b/content/blog_posts/scrabble-scramble.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Scrabble Scramble"
 date: '2025-07-18'
-description: "A modest proposal to enliven Scrabble games by randomizing the board layout."
+description: "A modest proposal to enliven my favorite board game."
 thumbnailUrl: "/post-assets/og-scrabble.jpg"
 animatedThumbnailUrl: "/post-assets/og-scrabble.gif"
 ---
