--- a/content/blog_posts/simplify-then-add-lightness.mdx
+++ b/content/blog_posts/simplify-then-add-lightness.mdx
@@ -7,25 +7,31 @@ thumbnailUrl: "/post-assets/og-post-fallback.jpg"
 
 Lotus Cars boss Colin Chapman famously instructed his engineers: “Simplify, then add lightness.” It became a philosophy that permeates every Lotus (I’m told; never driven one) – nimble sports cars known for being high on power-to-weight ratio and low on creature comforts.
 
-<ImageWithCaption
+<div className="py-8 lg:py-12 xl:-y-24">
+<Figure
+type="image"
 src="/post-assets/lotus-25.webp"
 alt="The Lotus 25 going around a corner in a 1960s Formula 1 race"
-width="1440"
-height="788"
+width={1440}
+height={788}
 caption="The Lotus 25 won 14 World Championship Grand Prix in the 1960s."
 attribution="Bernard Cahier / Getty Images"
 />
+</div>
 
 I probably first heard this quote years ago, but re-encountered it again this week, and it coincides with some documentation I’m writing for how to write in-app feedback requests for our product at [OfficeSpace Software](https://www.officespacesoftware.com/).
 
 One of my recommendations around the phrasing of these prompts was to keep it as brief as possible. Specifically: “Cut down your copy as much as possible, then give it to someone else so they can cut it down further.”
 
-<ImageWithCaption
+<div className="py-8 lg:py-12 xl:-y-24">
+<Figure
+type="image"
 src="/post-assets/feedback-examples.png"
 alt="Three examples of feedback prompts with different amounts of copy."
-width="1440"
-height="788"
+width={1440}
+height={788}
 />
+</div>
 
 Chapman’s quote is a bit tongue in cheek, but the reason I think it works so well as creative direction is:
 
