--- a/content/blog_posts/what-we-learn-from-copying.mdx
+++ b/content/blog_posts/what-we-learn-from-copying.mdx
@@ -23,34 +23,40 @@ When I was first learning graphic design, one of my hobbies was something called
 
 You may think that sounds pointlessly tedious, and unoriginal to boot. You’d be mostly right. Each piece took hours upon hours, and hundreds of individually drawn layers in Photoshop, to create.
 
-
-<ImageWithCaption
-    src="/post-assets/vexel-mustang-after.jpg"
-    width="800"
-    height="600"
-    alt="My vexel image of a Mustang Boss 429."
-    caption="My vexel of a Ford Mustang Boss 429."
+<div className="py-8 lg:py-12 xl:-y-24 flex flex-col gap-8 lg:gap-12">
+<Figure
+type="image"
+src="/post-assets/vexel-mustang-after.jpg"
+width={800}
+height={600}
+alt="My vexel image of a Mustang Boss 429."
+caption="My vexel of a Ford Mustang Boss 429."
 />
-<ImageWithCaption
-    src="/post-assets/vexel-mustang-before.jpg"
-    width="800"
-    height="600"
-    alt="The source photo."
-    caption="The photo it was based on."
+<Figure
+type="image"
+src="/post-assets/vexel-mustang-before.jpg"
+width={800}
+height={600}
+alt="The source photo."
+caption="The photo it was based on."
 />
+</div>
 
 
 When you’re studying something with your eyes—a written passage, a painting, a Ford Mustang, whatever—your mind jumps to conclusions. It [fills in gaps](https://www.psychologytoday.com/us/blog/what-is-a-human/202312/how-the-brain-fills-in-the-blanks). It’s feature, not a bug, of our brain.
 
 But when you set out to copy that thing, your eye is forced to examine every detail with an equal level of focus. As a result, you become more familiar with the work than you could any other way.
 
-<ImageWithCaption
-    src="/post-assets/vexel-detail.jpg"
-    width="600"
-    height="338"
-    alt="Detail shot of a vector of a car headlamp."
-    caption="A detail our brains gloss over: How light interacts with the chrome and reflective facets of a headlight. (From my vexel of a <a href='https://www.deviantart.com/olivv/art/RalliArt-191114280' target='_blank'>Mitsubishi rally car</a>.)"
+<div className="py-8 lg:py-12 xl:-y-24 flex flex-col gap-8 lg:gap-12">
+<Figure
+type="image"
+src="/post-assets/vexel-detail.jpg"
+width={600}
+height={338}
+alt="Detail shot of a vector of a car headlamp."
+caption="A detail our brains gloss over: How light interacts with the chrome and reflective facets of a headlight. (From my vexel of a <a href='https://www.deviantart.com/olivv/art/RalliArt-191114280' target='_blank'>Mitsubishi rally car</a>.)"
 />
+</div>
 
 As a product designer, I’ve spent hours fine tuning the optical details of my work – spacing, color, alignment, hierarchy, and so on. When you’re learning to master this skill, it can be difficult to know what makes one design work better than another when the difference lies in the tiny, atomic-level decisions like what shade of light gray to use for borders and whether to space two elements 10px or 12px apart from each other.
 
