--- a/content/case_studies/designing-for-good.mdx
+++ b/content/case_studies/designing-for-good.mdx
@@ -12,56 +12,60 @@ related: "Smart Dog Collar UI"
 
 
 <ProblemStatement
-    label
-    headline="When you’re faced with someone asking for help, the encounter can be stressful. You want to provide assistance, but a few dollars cash isn’t always the most effective solution."
-    content="The problems facing our asset-deprived population are complex, and solving them is politically fraught. We narrowed our focus to the precise moment that you, the 'helper,' choose to give aid to someone on the street. Using your phone, you can tap into a network of rideshare apps, food delivery services, and local shelters to provide more worthwhile support in just a few taps."
+  label
+  headline="When you’re faced with someone asking for help, the encounter can be stressful. You want to provide assistance, but a few dollars cash isn’t always the most effective solution."
+  content="The problems facing our asset-deprived population are complex, and solving them is politically fraught. We narrowed our focus to the precise moment that you, the 'helper,' choose to give aid to someone on the street. Using your phone, you can tap into a network of rideshare apps, food delivery services, and local shelters to provide more worthwhile support in just a few taps."
 />
 
-<div className="max-w-2xl">
-## Defining the Happy Path
-To sell this vision to investors, non-profit partners, and city leaders, we decided to build a high-fidelity interactive prototype that would help our client wow in his pitch meetings. That started with user flows and determining a happy path for the presentation. I worked with our Director of Research to map out logic that included options for giving food, shelter, and transportation.
-</div>
-
-<div className="text-center">
-<figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/product-design-1.png" alt="A user flow diagram." width={1000} height={400} quality="100" />
-</figure>
-</div>
-
-<div className="max-w-2xl">
-From there, we sketched out every screen that would be needed for the prototype, which gave us an idea of the scope and requirements for each step of the process. To offer food to a stranger, for example, involves all sorts of variables, like allergens, dietary preference, third-party cashiers, corporate partnership, and special menu selections. And the giver could combine multiple forms of aid, multiplying the complexity of each flow.
+<div className="caseStudyText">
+  ## Defining the Happy Path
+  To sell this vision to investors, non-profit partners, and city leaders, we decided to build a high-fidelity interactive prototype that would help our client wow in his pitch meetings. That started with user flows and determining a happy path for the presentation. I worked with our Director of Research to map out logic that included options for giving food, shelter, and transportation.
 </div>
 
 
-<div className="max-w-2xl">
-## Creating the Design Language
-In this case, the job of the design was to make the idea feel as real as possible right out of the gate. Not wanting to rely on any existing off-the-shelf UI framework, I created a unique look and feel, including custom illustrations for onboarding, to give the prototype a sense of character.
+<div className="caseStudyFigure">
+  <Figure
+    type="image"
+    src="/portfolio-assets/product-design-1.png"
+    alt="A user flow diagram."
+    width={1000}
+    height={400}
+    quality={100}
+  />
 </div>
 
-<div className="text-center">
-<figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/product-design-3.jpg" alt="A collage of the design elements of helper." width={800} height={600} quality="100" />
-</figure>
+<div className="caseStudyText">
+  From there, we sketched out every screen that would be needed for the prototype, which gave us an idea of the scope and requirements for each step of the process. To offer food to a stranger, for example, involves all sorts of variables, like allergens, dietary preference, third-party cashiers, corporate partnership, and special menu selections. And the giver could combine multiple forms of aid, multiplying the complexity of each flow.
 </div>
 
-<div className="max-w-2xl">
-## Prototyping the Final Product
-Finally, I used advanced prototyping tools to create animations, transitions, and interaction design details that helped make the product our client was presenting feel like a fully-formed idea. The prototype wowed in every pitch meeting, and has already begun driving investment in the startup.
+
+<div className="caseStudyText">
+  ## Creating the Design Language
+  In this case, the job of the design was to make the idea feel as real as possible right out of the gate. Not wanting to rely on any existing off-the-shelf UI framework, I created a unique look and feel, including custom illustrations for onboarding, to give the prototype a sense of character.
 </div>
 
-<div>
-  <figure className="not-prose">
-    <video
-        width="800"
-        height="600"
-        preload="metadata"
-        playsInline
-        autoPlay="autoplay"
-        muted
-        loop
-    >
-        <source src="/portfolio-assets/product-design-4.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
-  </figure>
+<div className="caseStudyFigure">
+  <Figure
+    type="image"
+    src="/portfolio-assets/product-design-3.jpg"
+    alt="A collage of the design elements of helper."
+    width={800}
+    height={600}
+    quality={100}
+  />
+</div>
+
+<div className="caseStudyText">
+  ## Prototyping the Final Product
+  Finally, I used advanced prototyping tools to create animations, transitions, and interaction design details that helped make the product our client was presenting feel like a fully-formed idea. The prototype wowed in every pitch meeting, and has already begun driving investment in the startup.
+</div>
+
+<div className="caseStudyFigure">
+  <Figure
+    type="video"
+    src="/portfolio-assets/product-design-4.mp4"
+    width={800}
+    height={600}
+    ambient
+  />
 </div>
