--- a/content/case_studies/room-booking-overview.mdx
+++ b/content/case_studies/room-booking-overview.mdx
@@ -11,45 +11,42 @@ related: "Designing for Good"
 ---
 
 <ProblemStatement
-    label
-    headline="Without a one-stop calendar view that integrated data from OfficeSpace, Facility Managers had no way of identifying booking inefficiencies."
-    content="By including some key clients early on in the design process, we ensured that the final product was perfectly suited to the needs of the target user persona."
+  label
+  headline="Without a one-stop calendar view that integrated data from OfficeSpace, Facility Managers had no way of identifying booking inefficiencies."
+  content="By including some key clients early on in the design process, we ensured that the final product was perfectly suited to the needs of the target user persona."
 />
 
-<div className="max-w-2xl">
-## Starting with a Sketch
-Because we had a decent idea of what the solution would look like, it was tempting to move quickly to final designs. But rather than getting ahead of ourselves, we started with a pencil and paper, listing the core requirements and sketching out a rough idea of the interface.
+<div className="caseStudyText">
+  ## Starting with a Sketch
+  Because we had a decent idea of what the solution would look like, it was tempting to move quickly to final designs. But rather than getting ahead of ourselves, we started with a pencil and paper, listing wthe core requirements and sketching out a rough idea of the interface.
 </div>
 
-<div className="text-center">
-<figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/rbo-1.png" alt="Napkin sketch of the feature." width={1000} height={500} quality="100" />
-</figure>
+<div className="caseStudyFigure">
+  <Figure
+    type="image"
+    src="/portfolio-assets/rbo-1.png"
+    alt="Napkin sketch of the feature."
+    width={1000}
+    height={500}
+  />
 </div>
 
 
-<div className="max-w-2xl">
-## Vetting the Idea
-In a series of one-on-one research calls with clients who had specifically requested this feature, I showed a wireframe prototype of the idea. This stage was crucial, as the feedback we gathered helped us triangulate 1) what unique value proposition we could offer, 2) what would be useful to our users, and 3) what existing solutions the feature would be competing with.
+<div className="caseStudyText">
+  ## Vetting the Idea
+  In a series of one-on-one research calls with clients who had specifically requested this feature, I showed a wireframe prototype of the idea. This stage was crucial, as the feedback we gathered helped us triangulate 1) what unique value proposition we could offer, 2) what would be useful to our users, and 3) what existing solutions the feature would be competing with.
 
-In the end, these interviews helped us ruthlessly prioritize which aspects were required for MVP and which could be added in subsequent phases.
+  In the end, these interviews helped us ruthlessly prioritize which aspects were required for MVP and which could be added in subsequent phases.
 </div>
 
-<div>
-  <figure className="not-prose">
-    <video
-        width="1000"
-        height="500"
-        preload="metadata"
-        playsInline
-        autoPlay="autoplay"
-        muted
-        loop
-    >
-        <source src="/portfolio-assets/rbo-2.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
-  </figure>
+<div className="caseStudyFigure">
+  <Figure
+    type="video"
+    src="/portfolio-assets/rbo-2.mp4"
+    width={1000}
+    height={500}
+    ambient
+  />
 </div>
 
 
@@ -60,50 +57,46 @@ In the end, these interviews helped us ruthlessly prioritize which aspects were 
 - Meeting privacy settings would need to be taken into consideration. Even seeing the title or the participants might be too sensitive.
 </Callout>
 
-<div className="max-w-2xl">
-## Taking it to High Fidelity
-Armed with knowledge and a finalized MVP scope, I now felt comfortable creating high-fidelity designs. Some aspects could utilize existing components from our design system, but there were some interactions, such as the grid layout and timeline scrubber, that were unique to this page. For these new patterns, I borrowed from similar experiences in other products like project management software and even video editing tools.
+<div className="caseStudyText">
+  ## Taking it to High Fidelity
+  Armed with knowledge and a finalized MVP scope, I now felt comfortable creating high-fidelity designs. Some aspects could utilize existing components from our design system, but there were some interactions, such as the grid layout and timeline scrubber, that were unique to this page. For these new patterns, I borrowed from similar experiences in other products like project management software and even video editing tools.
 </div>
 
-<div className="text-center">
-<figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/rbo-3.jpg" alt="Screenshot of the completed Room Booking Overview feature." width={1200} height={750} quality="100" />
-</figure>
+<div className="caseStudyFigure">
+  <Figure
+    type="image"
+    src="/portfolio-assets/rbo-3.jpg"
+    alt="Screenshot of the completed Room Booking Overview feature."
+    width={1200}
+    height={750}
+    quality={100}
+  />
 </div>
 
-<div className="max-w-2xl">
-## Preparing for a Smooth Handoff
-My core deliverable was a few dozen static screen mockups, but I know better than to think that will be enough for an efficient engineering handoff.
-My final Figma file also contained written documentation of our design decisions, links to videos I’d made for certain interactions, and specs for responsiveness, loading states, and screen transitions.
-
-All that meant that the build process was done in less than a quarter, with a minimal amount of back-and-forth and QA tickets.
+<div className="caseStudyText">
+  ## Preparing for a Smooth Handoff
+  My core deliverable was a few dozen static screen mockups, but I know better than to think that will be enough for an efficient engineering handoff.
+  My final Figma file also contained written documentation of our design decisions, links to videos I’d made for certain interactions, and specs for responsiveness, loading states, and screen transitions.
+  All that meant that the build process was done in less than a quarter, with a minimal amount of back-and-forth and QA tickets.
 </div>
 
-<div>
-  <figure className="not-prose">
-    <video
-        width="1000"
-        height="750"
-        preload="metadata"
-        playsInline
-        autoPlay="autoplay"
-        muted
-        loop
-    >
-        <source src="/portfolio-assets/rbo-4.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
-  </figure>
+<div className="caseStudyFigure">
+  <Figure
+    type="video"
+    width={1000}
+    height={750}
+    src="/portfolio-assets/rbo-4.mp4"
+    ambient
+  />
 </div>
 
-<div className="max-w-2xl">
-## Outcomes
-<blockquote className="not-prose my-12 pl-4 lg:pl-8 border-l-4 border-l-yellow-200 text-neutral-900! dark:text-neutral-300!">
-  <span className="block mb-4 font-display text-xl lg:text-2xl font-semibold">
-    "Ding ding ding!"
-  </span>
-  <cite className="leading-tight! not-italic! text-base"><p>The exact reaction of one of our clients upon seeing the alpha version of this feature for the first time.</p></cite>
-</blockquote>
-We expected this feature to find a dedicated niche in our client base, and it did. Room Booking Overview was launched as an add-on purchase with an attach rate of 25%, exceeding our expectations and immediately driving revenue growth. Since launch, we’ve shipped additional follow-up improvements based on our initial user research, creating a small but ardent set of users whose return rate signals just how well we hit the mark.
-
+<div className="caseStudyText">
+  ## Outcomes
+  <blockquote className="not-prose my-12 pl-4 lg:pl-8 border-l-4 border-l-yellow-200 text-neutral-900! dark:text-neutral-300!">
+    <span className="block mb-4 font-display text-xl lg:text-2xl font-semibold">
+      "Ding ding ding!"
+    </span>
+    <cite className="leading-tight! not-italic! text-base"><p>The exact reaction of one of our clients upon seeing the alpha version of this feature for the first time.</p></cite>
+  </blockquote>
+  We expected this feature to find a dedicated niche in our client base, and it did. Room Booking Overview was launched as an add-on purchase with an attach rate of 25%, exceeding our expectations and immediately driving revenue growth. Since launch, we’ve shipped additional follow-up improvements based on our initial user research, creating a small but ardent set of users whose return rate signals just how well we hit the mark.
 </div>
