--- a/content/case_studies/smart-dog-collar.mdx
+++ b/content/case_studies/smart-dog-collar.mdx
@@ -12,37 +12,47 @@ related: "Designing for Emerging Technology"
 
 
 <ProblemStatement
-    label
-    headline="Dogs bark. And when they bark for hours at a time while you’re away from home, you need to know."
-    content="The product was straightforward—a corrective collar that delivers a tone or small static vibration in response to extended barking—but the UX for the app that controlled it was clouded by questions. I took on the task of creating a UI that was informative and trustworthy, while working with our researcher to ensure that the experience was sensitive to the varied needs of pet parents, as well as pets themselves."
+  label
+  headline="Dogs bark. And when they bark for hours at a time while you’re away from home, you need to know."
+  content="The product was straightforward—a corrective collar that delivers a tone or small static vibration in response to extended barking—but the UX for the app that controlled it was clouded by questions. I took on the task of creating a UI that was informative and trustworthy, while working with our researcher to ensure that the experience was sensitive to the varied needs of pet parents, as well as pets themselves."
 />
 
-<div className="max-w-2xl">
-## Building Empathy
-Our first stop was a visit to the client’s offices, where we could see the collar and even test the static effect on ourselves. We leaned heavily on their domain expertise, and they relied on our UX research to build confidence in our design decisions.
+<div className="caseStudyText">
+  ## Building Empathy
+  Our first stop was a visit to the client’s offices, where we could see the collar and even test the static effect on ourselves. We leaned heavily on their domain expertise, and they relied on our UX research to build confidence in our design decisions.
 
-It quickly became clear that the pets would be their own user persona for this project, just like the owners. (You’ve heard of B2B2C—this was B2C2P!)
-As our on-site went along, I found myself sketching illustrations that would end up in the app, wanting to avoid a UI that felt sterile.
+  It quickly became clear that the pets would be their own user persona for this project, just like the owners. (You’ve heard of B2B2C—this was B2C2P!)
+  As our on-site went along, I found myself sketching illustrations that would end up in the app, wanting to avoid a UI that felt sterile.
 </div>
 
-<div className="text-center">
-<figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/smart-collar-1.jpg" alt="Illustrations of dogs barking." width={800} height={600} quality="100" />
-</figure>
+<div className="caseStudyFigure">
+  <Figure
+    type="image"
+    src="/portfolio-assets/smart-collar-1.jpg"
+    alt="Illustrations of dogs barking."
+    width={800}
+    height={600}
+    quality={100}
+  />
 </div>
 
-<div className="max-w-2xl">
-## Testing Two Approaches
-As I started roughing out wireframes, we soon keyed in on the setup screens as being an inflection point in the UX and a prime candidate for testing.
-The collar offered multiple training modes, and we wanted to find the best way to explain all three options while also providing a guided setup experience.
+<div className="caseStudyText">
+  ## Testing Two Approaches
+  As I started roughing out wireframes, we soon keyed in on the setup screens as being an inflection point in the UX and a prime candidate for testing.
+  The collar offered multiple training modes, and we wanted to find the best way to explain all three options while also providing a guided setup experience.
 
-How do you balance making a gentle recommendation with ensuring the user is fully informed? Which approach would instill the most confidence?
+  How do you balance making a gentle recommendation with ensuring the user is fully informed? Which approach would instill the most confidence?
 </div>
 
-<div className="text-center">
-<figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/smart-collar-2.png" alt="A wireframe with two approaches to onboarding." width={1000} height={750} quality="100" />
-</figure>
+<div className="caseStudyFigure">
+  <Figure
+    type="image"
+    src="/portfolio-assets/smart-collar-2.png"
+    alt="A wireframe with two approaches to onboarding."
+    width={1000}
+    height={750}
+    quality={100}
+  />
 </div>
 
 
@@ -55,16 +65,21 @@ This was definitely not an area where concision is king. In fact, we slowed down
 </Callout>
 
 
-<div className="max-w-2xl">
-## Crafting an Expressive UI
-When the time came to move from wireframes to high fidelity, the client felt comfortable enough by now to trust us with updating and modernizing their existing design language. They wanted the app to feel slick and easy-to-use.
+<div className="caseStudyText">
+  ## Crafting an Expressive UI
+  When the time came to move from wireframes to high fidelity, the client felt comfortable enough by now to trust us with updating and modernizing their existing design language. They wanted the app to feel slick and easy-to-use.
 
-Along with incorporating the illustrations I mentioned earlier, I made a point of orienting each screen around two principles: high clarity of information, and natural voice and tone. The goal was that the app would feel like a smart companion, proactively analyzing your pet’s behavior and guiding your decision-making.
+  Along with incorporating the illustrations I mentioned earlier, I made a point of orienting each screen around two principles: high clarity of information, and natural voice and tone. The goal was that the app would feel like a smart companion, proactively analyzing your pet’s behavior and guiding your decision-making.
 </div>
 
 
-<div className="text-center">
-<figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/smart-collar-3.jpg" alt="Screenshots of the final designs showing a dashboard that tracks bark events." width={1000} height={705} quality="100" />
-</figure>
+<div className="caseStudyFigure">
+  <Figure
+    type="image"
+    src="/portfolio-assets/smart-collar-3.jpg"
+    alt="Screenshots of the final designs showing a dashboard that tracks bark events."
+    width={1000}
+    height={705}
+    quality={100}
+  />
 </div>
