--- a/content/blog_posts/expressive-design-systems-and-the-genius-of-90s-nickelodeon.mdx
+++ b/content/blog_posts/expressive-design-systems-and-the-genius-of-90s-nickelodeon.mdx
@@ -25,6 +25,16 @@ The other thing was a documentary called [The Orange Years: The Nickelodeon Stor
 
 Even their logo had lax usage guidelines: "Don't mess with the wordmark, and use orange" – that's it. Everything else was fair game.
 
-<YoutubeEmbed videoId="hYNO3Qx9IO4" />
+<div className="aspect-16x9 my-8 lg:my-12">
+    <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/hYNO3Qx9IO4"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+    ></iframe>
+</div>
 
 Maybe *EDS* was just fresh on my mind, but what I see is a great example of an expressive design system. Not just the logo, but all the creative work done at Nickelodeon was governed by a system that left room for divergence and creativity, and it was a big reason why they thrived in the 90's and 2000's.
