--- a/content/case_studies/designing-for-emerging-technology.mdx
+++ b/content/case_studies/designing-for-emerging-technology.mdx
@@ -10,75 +10,59 @@ unlisted: false
 related: "Designing for Scale"
 ---
 
-<div className="max-w-2xl">
-## Concepts like these are born out of simple questions that start with two words: "What if?"
-While I'm a firm believer in the double diamond, in problem definition, in continuous discovery... I also think there's value in fully-formed visualization early in a project. Design is about solving problems, yes, but sometimes it’s about casting a vision. And casting a vision is critical when it comes to exploring emerging technology.
+<div className="caseStudyText">
+    ## Concepts like these are born out of simple questions that start with two words: "What if?"
+    While I'm a firm believer in the double diamond, in problem definition, in continuous discovery... I also think there's value in fully-formed visualization early in a project. Design is about solving problems, yes, but sometimes it’s about casting a vision. And casting a vision is critical when it comes to exploring emerging technology.
 </div>
 
 
 <div className="flex flex-col xl:flex-row items-center max-w-none gap-4 xl:gap-20">
-    <div className="w-full xl:w-1/2">
-        <video
-        width="800"
-        height="600"
-        preload="metadata"
-        playsInline
-        autoPlay="autoplay"
-        muted
-        loop
-        >
-        <source src="/portfolio-assets/prototyping-1.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-        </video>
-    </div>
-    <div className="w-full max-w-2xl xl:w-1/2 prose-h2:my-6">
-## Augmented Reality Gardening
-What if you could see how plants would look over time directly in your garden? This project imagines a way to build and preview a landscape design, including comparing different species and how they might grow into a cohesive collection. The UI would allow you browse different plants and drag to place them in your yard in one streamlined experience.
-    </div>
+  <div className="w-full xl:w-1/2">
+    <Figure
+      type="video"
+      width={800}
+      height={600}
+      src="/portfolio-assets/prototyping-1.mp4"
+      ambient
+    />
+  </div>
+  <div className="w-full max-w-2xl xl:w-1/2 prose-h2:my-6">
+    ## Augmented Reality Gardening
+    What if you could see how plants would look over time directly in your garden? This project imagines a way to build and preview a landscape design, including comparing different species and how they might grow into a cohesive collection. The UI would allow you browse different plants and drag to place them in your yard in one streamlined experience.
+  </div>
 </div>
 
 
 <div className="flex flex-col xl:flex-row items-center max-w-none gap-4 xl:gap-20">
-    <div className="w-full xl:w-1/2">
-        <video
-        width="800"
-        height="600"
-        preload="metadata"
-        playsInline
-        autoPlay="autoplay"
-        muted
-        loop
-        >
-        <source src="/portfolio-assets/prototyping-2.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-        </video>
-    </div>
-    <div className="w-full max-w-2xl xl:w-1/2 prose-h2:my-6">
-## Integrated Meal Planner
-What if your recipe book made recommendations based on the weather, then ordered the ingredients via a delivery app? This concept aims to alleviate the headache that is deciding what to cook and creating a grocery list every week. (Bonus: What if it could <a target="_blank" href="https://dribbble.com/shots/6032045-Meal-Planner-Concept-Recipe-Builder">read ingredient labels</a> to help you track calories?)
-
-    </div>
+  <div className="w-full xl:w-1/2">
+    <Figure
+      type="video"
+      width={800}
+      height={600}
+      src="/portfolio-assets/prototyping-2.mp4"
+      ambient
+    />
+  </div>
+  <div className="w-full max-w-2xl xl:w-1/2 prose-h2:my-6">
+    ## Integrated Meal Planner
+    What if your recipe book made recommendations based on the weather, then ordered the ingredients via a delivery app? This concept aims to alleviate the headache that is deciding what to cook and creating a grocery list every week. (Bonus: What if it could <a target="_blank" href="https://dribbble.com/shots/6032045-Meal-Planner-Concept-Recipe-Builder">read ingredient labels</a> to help you track calories?)
+  </div>
 </div>
 
 
 <div className="flex flex-col xl:flex-row items-center max-w-none gap-4 xl:gap-20">
-    <div className="w-full xl:w-1/2">
-        <video
-        width="800"
-        height="600"
-        preload="metadata"
-        playsInline
-        autoPlay="autoplay"
-        muted
-        loop
-        >
-        <source src="/portfolio-assets/prototyping-3.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-        </video>
-    </div>
-    <div className="w-full max-w-2xl xl:w-1/2 prose-h2:my-6">
-## 3D Woodworking Assistant
-What if you could see your woodworking project plans in 3D? As a hobbyist woodworker, I often start with a 3D model in Blender, but it can be burdensome to go back and forth to my computer to check the order of operations. Being able to see and manipulate the final product in 3D, even visualizing each cut on the stock I have in front of me, would be – let’s be honest here – super cool.
-    </div>
+  <div className="w-full xl:w-1/2">
+    <Figure
+      type="video"
+      width={800}
+      height={600}
+      src="/portfolio-assets/prototyping-3.mp4"
+      ambient
+    />
+  </div>
+  <div className="w-full max-w-2xl xl:w-1/2 prose-h2:my-6">
+    ## 3D Woodworking Assistant
+    What if you could see your woodworking project plans in 3D? As a hobbyist woodworker, I often start with a 3D model in Blender, but it can be burdensome to go back and forth to my computer to check the order of operations. Being able to see and manipulate the final product in 3D, even visualizing each cut on the stock I have in front of me, would be – let’s be honest here – super cool.
+  </div>
 </div>
 
