Refactor and reenable  portfolio password protection

--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -8,6 +8,7 @@ thumbnail: "/portfolio-assets/thumbnail-design-systems-new.png"
 og: "/portfolio-assets/design-systems-og.jpg"
 unlisted: false
 related: "Employee Dashboard"
+protected: true
 ---
 
 <ProblemStatement
