--- a/content/case_studies/employee-dashboard.mdx
+++ b/content/case_studies/employee-dashboard.mdx
@@ -8,6 +8,7 @@ thumbnail: ""
 og: "/portfolio-assets/employee-dashboard-og.jpg"
 unlisted: true
 related: "Designing for Good"
+protected: true
 ---
 
 <ProblemStatement
