--- a/content/case_studies/employee-dashboard.mdx
+++ b/content/case_studies/employee-dashboard.mdx
@@ -41,7 +41,7 @@ protected: true
   I also designed dual onboarding experiences; one to walk first-time users through the product, and another for existing users so they would not be caught off guard by the change.
 </div>
 
-<Callout headline="Elevarting User Voices">
+<Callout headline="Elevating User Voices">
   Across both phases of this project, we conducted 6 separate research studies, both quantitative and qualitative, with over 300 participants, including existing OfficeSpace users and users who had never seen our product before. We also enrolled key clients in an Early Access Program and collaborated directly with them to ensure there were no adoption barriers going into the general release.
 
   Our research findings informed changes to every iteration of the designs. Encouragingly, they also proved we were on the right track, as the new dashboard outperformed the existing homepage in every experiment, including subjective preference tests and objective usability studies.
